[package]
name = "hyper-staticfile"
version = "0.5.2"
authors = [
  "Zach Pomerantz <zmp@umich.edu>",
  "Jonathan Reem <jonathan.reem@gmail.com>",
  "Stéphan Kochen <stephan@kochen.nl>",
]
description = "Static file serving for Hyper 0.13"
repository = "https://github.com/stephank/hyper-staticfile"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/hyper-staticfile"
keywords = ["hyper", "web", "http", "file", "static"]
categories = ["web-programming::http-server"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
futures-util = "0.3.4"
http = "0.2.1"
hyper = "0.13.5"
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
tokio = { version = "0.2.20", features = ["fs", "macros"] }
url = "2.1.1"

[dev-dependencies]
tempdir = "0.3.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winbase"] }
